<resources>
    <string name="app_name">Kaioken</string>
    <string name="google_maps_key">AIzaSyCJTb1tezf_J7jxI3hyyX6zLO938BjNGRE</string>
    <string name="facebook_app_id">250222255760408</string>
    <string name="zalo_app_id">3655931698471355249</string>
    <string name="default_notification_channel_id">KAIOKEN</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="all_copyright">Powered by <b>AGV</b></string>
    <string name="all_ok">Đồng ý</string>
    <string name="all_not_ok">Không đồng ý</string>
    <string name="all_cancel">Hủy bỏ</string>
    <string name="all_cancel_choose">Huỷ chọn</string>
    <string name="all_close">Đóng</string>
    <string name="all_known">Đã hiểu</string>
    <string name="all_return_home">Quay về trang chính</string>
    <string name="all_feature_is_developing">Tính năng đang được phát triển</string>
    <string name="all_get_data_fail_message">Lấy thông tin thất bại</string>
    <string name="all_menu">Thực đơn</string>
    <string name="all_info">Thông tin</string>
    <string name="all_image">Hình ảnh</string>
    <string name="all_call_waiter">Gọi phục vụ</string>
    <string name="all_pieces">phần</string>
    <string name="all_confirm">Xác nhận</string>
    <string name="all_send_comment">Gửi phản hồi</string>
    <string name="all_later">Để sau</string>
    <string name="all_message_handling">Đang tiến hành xử lý&#8230;</string>
    <string name="all_sum">Tổng</string>
    <string name="all_payment">Thanh Toán</string>
    <string name="all_add_food">Thêm món</string>
    <string name="all_final_money">Tổng cộng</string>
    <string name="all_staff">Nhân viên</string>
    <string name="all_minutes">Phút</string>
    <string name="all_finish">Hoàn tất</string>
    <string name="something_went_wrong">Có lỗi xảy ra</string>
    <string name="all_rating_success">Đánh giá thành công</string>
    <string name="all_rating_fail">Đánh giá thất bại</string>
    <string name="all_discount">Giảm giá</string>
    <string name="all_extra">Phụ thu</string>
    <string name="all_vat">VAT</string>
    <string name="all_get_list_image_fail">Lấy danh sách hình ảnh thất bại</string>
    <string name="all_slogan">Gọi món ăn\n chưa bao giờ đơn giản đến thế</string>
    <string name="all_connecting_to_server">Đang kết nối đến máy chủ&#8230;</string>
    <string name="all_reconnect">Kết nối lại</string>
    <string name="all_send_require">Gửi yêu cầu</string>
    <string name="all_distance">Cách bạn</string>
    <string name="all_km">km</string>
    <string name="all_m">m</string>
    <string name="all_your_location">Vị trí của bạn</string>
    <string name="all_content">Nội dung</string>
    <string name="all_quantity">Số lượng</string>
    <string name="all_comment">Bình luận</string>
    <string name="all_upload_image_fail">Tải ảnh lên thất bại</string>
    <string name="all_ho_chi_minh_city">Tp.Hồ Chí Minh</string>
    <string name="all_no_result">Không tìm được kết quả</string>
    <string name="all_found">Tìm thấy</string>
    <string name="all_result">kết quả</string>
    <string name="all_scan_code">Quét mã</string>
    <string name="all_login">Đăng nhập</string>
    <string name="all_start">Bắt đầu</string>
    <string name="all_name_customer">Tên khách hàng</string>
    <string name="all_phone_number">Số điện thoại</string>
    <string name="all_note">Ghi chú</string>
    <string name="all_add_note">Thêm ghi chú</string>
    <string name="all_address">Địa chỉ</string>
    <string name="all_coordinates">Toạ độ</string>
    <string name="all_cash">Tiền mặt</string>
    <string name="all_visa">Visa</string>
    <string name="all_must_to_enter">Không được bỏ trống</string>
    <string name="all_must_enter_digit">Bắt buộc phải nhập số</string>
    <string name="all_password">Mật khẩu</string>
    <string name="all_display_name">Tên hiển thị</string>
    <string name="all_register">Đăng ký</string>
    <string name="all_continue">Tiếp tục</string>
    <string name="all_sented">Đã gửi</string>
    <string name="all_try_again">Thử lại</string>
    <string name="all_sex">Giới tính</string>
    <string name="all_day_of_birth">Ngày sinh</string>
    <string name="all_save_change">Lưu thay đổi</string>
    <string name="all_save">Lưu</string>
    <string name="all_email_address">Email</string>
    <string name="all_logout">Đăng xuất</string>
    <string name="all_edit">Sửa</string>
    <string name="all_update_success">Cập nhật thành công</string>
    <string name="all_check">Kiểm tra</string>
    <string name="all_see_detail_store">Chi tiết cửa hàng</string>
    <string name="all_see_detail_order">Chi tiết đơn hàng</string>
    <string name="all_address_delivery">Địa chỉ giao hàng</string>
    <string name="all_order">Đơn hàng</string>
    <string name="all_notice">Thông báo</string>
    <string name="all_history">Lịch sử</string>
    <string name="all_add">Thêm</string>
    <string name="all_chart">Biểu đồ</string>
    <string name="all_delete">Xóa</string>
    <string name="all_do_you_want_to_delete_this_item">Bạn có chắc muốn xoá dữ liệu này?</string>
    <string name="all_no">Không</string>
    <string name="all_choose_max_images">Chỉ được chọn tối đa %d hình</string>
    <string name="all_money">Số tiền</string>
    <string name="all_cannot_process">Không thể thực hiện</string>
    <string name="all_saved">Đã lưu</string>
    <string name="all_deleted_successfully">Xóa thành công</string>
    <string name="all_delete_fail">Xoá thất bại</string>
    <string name="all_customer">Khách hàng</string>
    <string name="all_table">Bàn</string>
    <string name="all_cashier">Thu ngân</string>
    <string name="all_surcharge">Phụ thu</string>
    <string name="all_received_money">Tiền nhận</string>
    <string name="all_excess_money">Tiền thừa</string>
    <string name="all_print">In</string>
    <string name="all_no_connected_printer">Không có máy in được kết nối</string>
    <string name="all_rate">Đánh giá</string>
    <string name="all_day_at">%d Tháng %d lúc %d:%02d</string>
    <string name="all_today_at">%02d:%02d</string>
    <string name="all_yesterday_at">Hôm qua lúc %d:%02d</string>
    <string name="all_x_day_before">%,d ngày trước</string>
    <string name="all_x_hour_before">%,d giờ trước</string>
    <string name="all_x_minus_before">%,d phút trước</string>
    <string name="all_ki">Ki</string>
    <string name="all_i_have_coupon">Tôi có mã giảm giá</string>
    <string name="all_error_global">Tải dữ liệu thất bại</string>
    <string name="all_please_try_again">Vui lòng thử lại sau</string>
    <string name="all_not_connected">Không có kết nối</string>
    <string name="all_connect_success">Kết nối thành công</string>
    <string name="all_connecting">Đang kết nối&#8230;</string>
    <string name="all_can_not_find_address">Không tìm được địa chỉ</string>
    <string name="all_unknown">Không xác định</string>
    <string name="all_all">Tất cả</string>
    <string name="all_promotion">Khuyến mãi</string>
    <string name="all_news">Tin tức</string>
    <string name="all_introduce">Giới thiệu</string>
    <string name="all_terms_and_condition">Tiếp tục nghĩa là bạn đồng ý \n với các <a href="https://kaioken.vn">điều khoản</a> sử dụng Kaioken</string>
    <string name="all_size_s">Size S</string>
    <string name="all_size_m">Size M</string>
    <string name="all_size_l">Size L</string>
    <string name="all_cart">Giỏ hàng</string>
    <string name="all_done">Xong</string>
    <string name="all_to">đến</string>
    <string name="all_excess">Còn lại</string>
    <string name="spotlight_qr_title">Quét để gọi món</string>
    <string name="spotlight_qr_content">Quét mã QR trên bàn để xem thực đơn và gọi gọi món</string>
    <string name="spotlight_offer_title">Cửa hàng gợi ý</string>
    <string name="spotlight_offer_content">Xem danh sách các cửa hàng gợi ý, đang khuyến mãi</string>
    <string name="spotlight_category_title">Danh mục cửa hàng</string>
    <string name="spotlight_category_content">Chọn loại cửa hàng bạn muốn tìm kiếm</string>
    <string name="spotlight_follow_title">Yêu thích</string>
    <string name="spotlight_follow_content">Xem danh sách cửa hàng bạn yêu thích và đang theo dõi</string>
    <string name="spotlight_mode_show_title">Chọn chế độ xem</string>
    <string name="spotlight_mode_show_content">Chuyển đổi giữa chế độ xem trên bản đồ và xem theo danh sách</string>
    <string name="format_distance_x">Cách bạn: %s</string>
    <string name="format_money_long">%,dk</string>
    <string name="format_x_percent">%d%%</string>
    <string name="format_x_k">%dk</string>
    <string name="format_x_k_double">%.3fK</string>
    <string name="format_x_k_float">%.1fK</string>
    <string name="format_x_ki">%d Ki</string>
    <string name="format_money_long_with_negative_signal">-%,dk</string>
    <string name="format_sum_x_k">Tổng: %,dK</string>
    <string name="format_sum_x_k_string">Tổng: %s</string>
    <string name="format_time_x_seconds">%d giây</string>
    <string name="format_invoice_no_x">Số HĐ: %s</string>
    <string name="format_sum_and_species">%d phần: %dK</string>
    <string name="format_sum_x_quantity">Tổng <b>%d</b> phần</string>
    <string name="format_staff_x">Nhân viên - %s</string>
    <string name="format_delete_x">Xoá (%d)</string>
    <string name="format_coupon_code">Mã giảm giá: <b>%s</b></string>
    <string name="format_coupon_exp">Sử dụng đến: <b>%s</b></string>
    <string name="format_sum_bill">Tổng hoá đơn: %dk</string>
    <string name="format_discount_x_k">Giảm giá: %dK</string>
    <string name="dialog_require_network_message">Không có kết nối đến Internet\nVui lòng kiểm tra lại đường truyền</string>
    <string name="dialog_cannot_connect_to_socket">Không thể kết nối được với máy chủ\nVui lòng thử lại sau.</string>
    <string name="sorry_message">Rất xin lỗi vì sự bất tiện này!</string>
    <string name="press_once_to_exit">Nhấn lần nữa để thoát</string>
    <string name="dialog_choose_type_use_local">Dùng tại quán</string>
    <string name="dialog_choose_type_delivery">Giao hàng</string>
    <string name="dialog_choose_type_book">Đặt chỗ</string>
    <string name="dialog_choose_type_title">Chọn loại hình sử dụng</string>
    <string name="about_powered_by_agv">Phát triển bởi <b>AGV</b></string>
    <string name="about_hotline">0904 944 112</string>
    <string name="about_email">info@kaioken.vn</string>
    <string name="about_website">https://kaioken.vn</string>
    <string name="payment_enter_discount">Nhập mã giảm giá</string>
    <string name="detail_store_share_for_friends">Chia sẻ cho bạn bè</string>
    <string name="detail_store_share_for_friends_sub">Chia sẻ cửa hàng cho bạn bè, Facebook, Zalo</string>
    <string name="detail_store_time_opening">Thời gian mở cửa</string>
    <string name="detail_store_description">Mô tả cửa hàng</string>
    <string name="detail_store_click_to_direct">Nhấp vào để xem chỉ đường</string>
    <string name="detail_store_contact">Liên hệ</string>
    <string name="detail_store_recruitment">Tuyển dụng</string>
    <string name="detail_store_is_openning">Đang mở cửa</string>
    <string name="detail_store_see_detail_promotion">Nhấp vào để xem chi tiết khuyến mãi</string>
    <string name="map_filter">Lọc kết quả</string>
    <string name="map_restaurant_have_delivery">Có giao hàng</string>
    <string name="map_search_around">Tìm quanh</string>
    <string name="map_search_now">Tìm ngay</string>
    <string name="map_search_radius">Bán kính</string>
    <string name="finance_get_money">Thu</string>
    <string name="finance_spent_money">Chi</string>
    <string name="finance_loan">Cho vay</string>
    <string name="finance_debt">Nợ</string>
    <string name="finance_choose_form">Chọn hình thức</string>
    <string name="update_profile_old_password">Mật khẩu cũ</string>
    <string name="update_profile_new_password">Mật khẩu mới</string>
</resources>