<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="@dimen/all_padding_long"
    android:background="@color/colorMasterialGrey_4">
    <agv.kaak.vn.kaioken.widget.InputText
        android:id="@+id/tvOldPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:it_notnull="true"
        app:it_title="@string/update_profile_old_password"
        app:it_content=""/>
    <agv.kaak.vn.kaioken.widget.InputText
        android:id="@+id/tvNewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/all_margin_long"
        app:it_notnull="true"
        app:it_title="@string/update_profile_new_password"
        app:it_content=""/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etContent"
        android:layout_marginTop="@dimen/all_button_margin_top_dialog">
        <Button
            android:id="@+id/btnSave"
            style="@style/TextButtonPrimary"
            android:layout_alignParentEnd="true"
            android:text="@string/all_save_change"/>
        <Button
            android:id="@+id/btnCancel"
            style="@style/TextButtonPrimary"
            android:layout_marginRight="@dimen/all_margin_short"
            android:layout_toLeftOf="@id/btnSave"
            android:text="@string/all_cancel"/>
    </RelativeLayout>
</LinearLayout>