<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/all_padding_long"
    tools:context=".activity.AboutActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/aldrich"
        android:text="Kaioken"
        android:textColor="@color/colorTextVioletPrimary"
        android:textSize="50sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:fontFamily="@font/rubik"
        android:text="@string/about_powered_by_agv"
        android:textColor="@color/colorTextPrimary" />

    <TextView
        android:id="@+id/tvVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="Phiên bản: 1.1.0" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/all_line_split_super_slim"
        android:layout_marginBottom="@dimen/all_margin_long"
        android:layout_marginTop="@dimen/all_margin_long"
        android:background="@color/colorGrayAppLight" />

    <TextView
        android:id="@+id/tvHotline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_background_transparent_gray_when_choose"
        android:drawableLeft="@drawable/ic_phone_call"
        android:drawablePadding="@dimen/all_padding_long"
        android:drawableTint="@color/colorBlackPrimary"
        android:text="@string/about_hotline"
        android:textColor="@color/colorTextPrimary" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/all_margin_short"
        android:drawableLeft="@drawable/ic_mail"
        android:drawablePadding="@dimen/all_padding_long"
        android:drawableTint="@color/colorBlackPrimary"
        android:text="@string/about_email"
        android:textColor="@color/colorTextPrimary" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/all_margin_short"
        android:drawableLeft="@drawable/ic_website"
        android:drawablePadding="@dimen/all_padding_long"
        android:drawableTint="@color/colorBlackPrimary"
        android:text="@string/about_website"
        android:textColor="@color/colorTextPrimary" />
</LinearLayout>